--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Nhóm 5
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>32smiles.com</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+</head>
+<body>
+    <header class="header">
+        <div class="content">
+            <div class="header-top">
+                <div class="logo">
+                    <span class="hinh">
+                         <img src="assets/css/img/logo.png" alt="logo"> 
+                    </span>
+                    <span class="chu">32smiles</span>
+                </div>
+                <nav class="navbar">
+                    <ul class="navbar-list">
+                        <li class="navbar-item">
+                            <a href="#!" class="navbar-link">HOME</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a href="#!" class="navbar-link">SERVICES </a>
+                        </li>
+                        <li class="navbar-item">
+                            <a href="#!" class="navbar-link"> ABOUT</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a href="#!" class="navbar-link"> DOCTORT</a>
+                        </li>
+
+                    </ul>
+
+                </nav>
+                <!-- DANG NHAP -->
+                <div class="action">
+                    <a href="#!" class="action-btn">LOG IN</a>
+                    <a href="#!" class="action-btn">SIGN UP</a>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </header>
+    
+</body>
+</html>
