--- a/index.html
+++ b/index.html
@@ -43,10 +43,27 @@
                 </div>
 
             </div>
+            <section class="hero">
+                <section class="hero__content">
+                    <h1 class="hero__heading">Hay Nho Cham Soc Suc Khoe Rang Mieng</h1>
+                    <p class="hero__desc">Kham rang 6 Thang Moi Lan, Hay bao ve rang mieng.</p>
+                    <div class="hero__row">
+                        <a href="#!" class="action-btn"> Book Online</a>
+                        <span class="hero__phone">or call 0362061339</span>
+                    </div>
+                </section>
+                <div class="hero__media">
+                    <figure class="hero__images">
+                        <img src="/assets/css/img/khambenh.jpg" alt="" class="hero__img">
+                        <img src="/assets/css/img/benhnhan.jpg" alt="" class="hero__img">
+
+                    </figure>
+                </div>
+
+            </section>
+
 
         </div>
-
-
     </header>
     
 </body>
