--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </section>
                 <div class="hero__media">
                     <figure class="hero__images">
-                        <img src="/assets/css/img/khambenh.jpg" alt="" class="hero__img">
-                        <img src="/assets/css/img/benhnhan.jpg" alt="" class="hero__img">
+                        <img src="./assets/css/img/khambenh.jpg" alt="" class="hero__img">
+                        <img src="./assets/css/img/benhnhan.jpg" alt="" class="hero__img">
 
                     </figure>
                 </div>
