--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
             <section class="hero">
                 <section class="hero__content">
-                    <h1 class="hero__heading">Hay Nho Cham Soc Suc Khoe Rang Mieng</h1>
-                    <p class="hero__desc">Kham rang 6 Thang Moi Lan, Hay bao ve rang mieng.</p>
+                    <h1 class="hero__heading">Get Routine Dental Care Every Six Months</h1>
+                    <p class="hero__desc">Take care of your teeth regularly. Because your smile will bring positive energy</p>
                     <div class="hero__row">
                         <a href="#!" class="action-btn"> Book Online</a>
                         <span class="hero__phone">or call 0362061339</span>
