--- a/index.html
+++ b/index.html
@@ -7,93 +7,6 @@
         <title>32smile</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-
-        <!-- Favicon -->
-        <link
-            rel="apple-touch-icon"
-            sizes="57x57"
-            href="./assets/favicon/apple-icon-57x57.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="60x60"
-            href="./assets/favicon/apple-icon-60x60.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="72x72"
-            href="./assets/favicon/apple-icon-72x72.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="76x76"
-            href="./assets/favicon/apple-icon-76x76.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="114x114"
-            href="./assets/favicon/apple-icon-114x114.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="120x120"
-            href="./assets/favicon/apple-icon-120x120.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="144x144"
-            href="./assets/favicon/apple-icon-144x144.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="152x152"
-            href="./assets/favicon/apple-icon-152x152.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="./assets/favicon/apple-icon-180x180.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="192x192"
-            href="./assets/favicon/android-icon-192x192.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="./assets/favicon/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="96x96"
-            href="./assets/favicon/favicon-96x96.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="./assets/favicon/favicon-16x16.png"
-        />
-        <link rel="manifest" href="./assets/favicon/manifest.json" />
-        <meta name="msapplication-TileColor" content="#ffffff" />
-        <meta
-            name="msapplication-TileImage"
-            content="./assets/favicon/ms-icon-144x144.png"
-        />
-        <meta name="theme-color" content="#ffffff" />
-
-        <!-- Embed fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Sora:wght@300;400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
-
         <!-- Reset CSS -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
@@ -212,7 +125,7 @@
                     <div class="service__row">
                         <figure>
                             <img
-                                src="./assets/img/service.jpg"
+                                src="./assets/css/img/hinh5.webp"
                                 alt=""
                                 class="service__img"
                             />
@@ -371,12 +284,12 @@
                         <div class="feature__media">
                             <figure class="feature__images">
                                 <img
-                                    src="./assets/img/feature-01.jpg"
+                                    src="./assets/css/img/hinh2.webp"
                                     alt=""
                                     class="feature__img"
                                 />
                                 <img
-                                    src="./assets/img/feature-02.jpg"
+                                    src="./assets/css/img/hinh1.webp"
                                     alt=""
                                     class="feature__img"
                                 />
@@ -412,9 +325,9 @@
                         <article class="member-item">
                             <div class="member-item__img-bg">
                                 <img
-                                    src="./assets/img/member-01.png"
+                                    src="./assets/css/img/bacsi1.png"
                                     alt="Dr. Essence Page"
-                                    class="member-item__thumb"
+                                    class="member-item__thumb" 
                                 />
                             </div>
                             <h3 class="member-item__name">Dr. Essence Page</h3>
@@ -427,7 +340,7 @@
                         <article class="member-item">
                             <div class="member-item__img-bg">
                                 <img
-                                    src="./assets/img/member-02.png"
+                                    src="./assets/css/img/bacsi2.png"
                                     alt="Dr. Essence Page"
                                     class="member-item__thumb"
                                 />
@@ -442,7 +355,7 @@
                         <article class="member-item">
                             <div class="member-item__img-bg">
                                 <img
-                                    src="./assets/img/member-03.png"
+                                    src="./assets/css/img/bacsi3.png"
                                     alt="Dr. Essence Page"
                                     class="member-item__thumb"
                                 />
@@ -457,7 +370,7 @@
                         <article class="member-item">
                             <div class="member-item__img-bg">
                                 <img
-                                    src="./assets/img/member-04.png"
+                                    src="./assets/css/img/bacsi4.png"
                                     alt="Dr. Essence Page"
                                     class="member-item__thumb"
                                 />
@@ -509,48 +422,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- Install -->
-            <section class="install">
-                <div class="container">
-                    <div class="install__inner">
-                        <figure>
-                            <img
-                                src="./assets/img/mobile-app.png"
-                                alt=""
-                                class="install__img"
-                            />
-                        </figure>
-                        <section class="install__content">
-                            <h2 class="install__heading section-heading">
-                                Take back your smile with dentures
-                            </h2>
-                            <p class="install__desc section-desc">
-                                If you’re missing multiple teeth due to decay,
-                                injury, or the natural aging process, dentures
-                                might be the perfect solution.
-                            </p>
-                            <div class="install__row">
-                                <a href="#!">
-                                    <img
-                                        src="./assets/img/google-play.svg"
-                                        alt=""
-                                        class="install__btn-img"
-                                    />
-                                </a>
-                                <a href="#!">
-                                    <img
-                                        src="./assets/img/app-store.svg"
-                                        alt=""
-                                        class="install__btn-img"
-                                    />
-                                </a>
-                            </div>
-                        </section>
-                    </div>
-                </div>
-            </section>
-
             <!-- News -->
             <section class="news">
                 <div class="container">
@@ -605,7 +476,7 @@
                                 <figure class="news-item__thumb">
                                     <a href="#!">
                                         <img
-                                            src="./assets/img/news-01.jpg"
+                                            src="./assets/css/img/cannhac1.webp"
                                             alt=""
                                             class="news-item__img"
                                         />
@@ -634,7 +505,7 @@
                                 <figure class="news-item__thumb">
                                     <a href="#!">
                                         <img
-                                            src="./assets/img/news-02.jpg"
+                                            src="./assets/css/img/cannhac2.webp"
                                             alt=""
                                             class="news-item__img"
                                         />
@@ -690,12 +561,7 @@
                             <div class="logo">
                                 <span class="logo__circle"></span>
                                 <span class="logo__text">
-                                    <span class="logo__brand">shine</span>
-                                    <span
-                                        class="logo__brand logo__brand--small"
-                                    >
-                                        smile
-                                    </span>
+                                    32smiles
                                 </span>
                             </div>
                         </a>
@@ -839,7 +705,7 @@
 
                 <div class="footer__copyright">
                     <p class="footer__copyright-text">
-                        2021 GDN. Copyright and All rights reserved.
+                        2023. Copyright and All rights reserved.
                     </p>
                 </div>
             </div>
