--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow" style="position: fixed; z-index: 1; top: 0;left: 0; right: 0;
+    <nav class="navbar navbar-expand-lg navbar-light shadow" style="position: fixed; z-index: 3; top: 0;left: 0; right: 0;
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     " >
         <div class="container d-flex justify-content-between align-items-center">
@@ -257,7 +257,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="shop-single1.html">
                             <img src="./assets/img/bacsi1.png" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
@@ -271,7 +271,7 @@
                                 </li>
                                 <li class="text-muted text-right">$240.00/hour</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Dr. John Smith</a>
+                            <a href="shop-single1.html" class="h2 text-decoration-none text-dark">Dr. John Smith</a>
                             <p class="card-text">
                                 University of Oxford Medical School - Oxford, UK
                             </p>
@@ -281,7 +281,7 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="shop-single2.html">
                             <img src="./assets/img/bacsi2.png" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
@@ -295,7 +295,7 @@
                                 </li>
                                 <li class="text-muted text-right">$480.00/hour</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Dr. Michael Brown</a>
+                            <a href="shop-single2.html" class="h2 text-decoration-none text-dark">Dr. Michael Brown</a>
                             <p class="card-text">
                                 Harvard Medical School - Boston, Massachusetts, USA
                             </p>
@@ -305,7 +305,7 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="shop-single3.html">
                             <img src="./assets/img/bacsi3.png" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
@@ -319,7 +319,7 @@
                                 </li>
                                 <li class="text-muted text-right">$360.00/hour</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Dr. Sarah Johnson</a>
+                            <a href="shop-single3.html" class="h2 text-decoration-none text-dark">Dr. Sarah Johnson</a>
                             <p class="card-text">
                                 Yale School of Medicine - New Haven, Connecticut, USA
                             </p>
@@ -546,7 +546,6 @@
                 </div>
             </div>
         </div>
-
     </footer>
     <!-- End Footer -->
 
