--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/                 timhinhganvothem">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/           timhinhganvothem">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/templatemo.css">
@@ -472,7 +472,7 @@
                         </li>
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel:010-020-0340">0362061339</a>
+                            <a class="text-decoration-none" href="tel:0362061339">0362061339</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope fa-fw"></i>
@@ -529,6 +529,20 @@
                     <div class="input-group mb-2">
                         <input type="text" class="form-control bg-dark border-light" id="subscribeEmail" placeholder="Email address">
                         <div class="input-group-text btn-success text-light">Subscribe</div>
+                        <a href="index.html">
+                            <img src="./assets/img/Home.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 10px;right: 10px;
+                            display: inline-block;">
+                        </a>
+                        <a href="www.facebook.com">
+                        <img src="./assets/img/face.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 80px;right: 10px;">
+                        </a>
+                        <a href="contact.html">
+                        <img src="./assets/img/diachi.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 150px;right: 10px;">
+                        </a>
+                        <a href="tel:0362061339">
+                        <img src="./assets/img/phone.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 220px;right: 10px;">
+                        </a>
+                       
                     </div>
                 </div>
             </div>
