--- a/contact.html
+++ b/contact.html
@@ -138,20 +138,20 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 
 
     <!-- Start Content Page -->
-    <div class="container-fluid bg-light py-5">
+    <div class="container-fluid bg-light py-5" style="margin-top: 55px;">
         <div class="col-md-6 m-auto text-center">
             <h1 class="h1">Contact Us</h1>
             <p>
-                Proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                Lorem ipsum dolor sit amet.
+                Contact us if you need dental care. We are pleased to serve you and look forward to receiving your comments
             </p>
         </div>
     </div>
 
     <!-- Start Map -->
-    <div id="mapid" style="margin-top: 0;"></div>
+    <div id="mapid" ></div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.268022480453!2d106.67926337580766!3d10.790772458927409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528d35939c66f%3A0xe52e3ed732b15272!2zVHLGsOG7nW5nIENhbyDEkOG6s25nIEZQVCBQb2x5dGVjaG5pYyAoQ1MxKQ!5e0!3m2!1svi!2s!4v1684657238074!5m2!1svi!2s"
      width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     <hr>
     <!-- Ena Map -->
 
     <!-- Start Contact -->
