--- a/index.html
+++ b/index.html
@@ -224,19 +224,19 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="./assets/img/sanpham1.jpg" class="rounded-circle img-fluid border"></a>
-                <h5 class="text-center mt-3 mb-3">Toothbrush</h5>
-                <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
+                <a href="shop.html"><img src="./assets/img/sanpham1.jpg" class="rounded-circle img-fluid border"></a>
+                <h5 class="text-center mt-3 mb-3" style="margin-left: -60px;">Toothbrush</h5>
+                <p class="text-center"><a class="btn btn-success" style="margin-left: -60px;">Go Shop</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="./assets/img/sanpham2.jpg" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Toothpaste</h2>
-                <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
+                <a href="shop.html"><img src="./assets/img/sanpham2.jpg" class="rounded-circle img-fluid border"></a>
+                <h2 class="h5 text-center mt-3 mb-3" style="margin-left: -60px;">Toothpaste</h2>
+                <p class="text-center"><a class="btn btn-success" style="margin-left: -60px;">Go Shop</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="./assets/img/sanpham3.jpg" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Mouthwash</h2>
-                <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
+                <a href="shop.html"><img src="./assets/img/sanpham3.jpg" class="rounded-circle img-fluid border"></a>
+                <h2 class="h5 text-center mt-3 mb-3" style="margin-left: -60px;">Mouthwash</h2>
+                <p class="text-center"><a class="btn btn-success" style="margin-left: -60px;">Go Shop</a></p>
             </div>
         </div>
     </section>
