--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <!-- Load fonts style after rendering the layout styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdn.leanhduc.pro.vn/utilities/animation/shake-effect/style.css"/>
 
     <!-- Load map styles -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
@@ -258,6 +259,19 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
                     <div class="input-group mb-2">
                         <input type="text" class="form-control bg-dark border-light" id="subscribeEmail" placeholder="Email address">
                         <div class="input-group-text btn-success text-light">Subscribe</div>
+                        <a href="index.html">
+                            <img src="./assets/img/Home.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 10px;right: 10px;">
+                        </a>
+                        <a href="www.facebook.com">
+                        <img src="./assets/img/face.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 80px;right: 10px;">
+                        </a>
+                        <a href="contact.html">
+                        <img src="./assets/img/diachi.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 150px;right: 10px;">
+                        </a>
+                        <a href="tel:0362061339">
+                        <img class="rung" src="./assets/img/phone.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 220px;right: 10px;">
+                        </a>
+
                     </div>
                 </div>
             </div>
