--- a/shop-single2.html
+++ b/shop-single2.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/templatemo.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="https://cdn.leanhduc.pro.vn/utilities/animation/shake-effect/style.css"/>
 
     <!-- Load fonts style after rendering the layout styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
@@ -873,7 +874,7 @@
                         <img src="./assets/img/diachi.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 150px;right: 10px;">
                         </a>
                         <a href="tel:0362061339">
-                        <img src="./assets/img/phone.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 220px;right: 10px;">
+                        <img class="rung" src="./assets/img/phone.png" alt="" height="50px" width="50px" style="position: fixed; z-index: 1; bottom: 220px;right: 10px;">
                         </a>
                     </div>
                 </div>
