--- a/shop-single1.html
+++ b/shop-single1.html
@@ -53,7 +53,7 @@
     " >
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html" style="font-family: cursive;">
+            <a class="navbar-brand text-success logo h1 align-self-center, rung" href="index.html" style="font-family: cursive;">
                    32smiles
             </a>
 
