--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 " >
     <div class="container d-flex justify-content-between align-items-center">
 
-        <a class="navbar-brand text-success logo h1 align-self-center" href="index.html" style="font-family: cursive;">
+        <a class="navbar-brand text-success logo h1 align-self-center,rung" href="index.html" style="font-family: cursive;">
                32smiles
         </a>
 
