--- a/shop.html
+++ b/shop.html
@@ -232,7 +232,7 @@
                                         
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$315.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>315.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -269,7 +269,7 @@
                                         <i class="text-warning fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$129.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>129.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                                         <i class="text-warning fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$279.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>279.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -343,7 +343,7 @@
                                         <i class="text-warning fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$179.99</b></p>
+                                <p class="text-center mb-0"> <strong>$</strong><b>179.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -380,7 +380,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$499.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>499.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$399.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>399.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -454,7 +454,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$299.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>299.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -492,7 +492,7 @@
                                         
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$229.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>229.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -529,7 +529,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b>$65.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>65.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -566,7 +566,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"> <b>$60.99</b></p>
+                                <p class="text-center mb-0"> <strong>$</strong><b>60.99</b> </p>
                             </div>
                         </div>
                     </div>
@@ -603,7 +603,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"> <b>$55.99 </b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>55.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -640,7 +640,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0"><b> $60.99</b></p>
+                                <p class="text-center mb-0"><strong>$</strong><b>60.99</b></p>
                             </div>
                         </div>
                     </div>
@@ -692,7 +692,7 @@
                 </tbody>
             </table>
             <div class="price-total" style="text-align: right;">
-                <p style="font-weight: bold;">Tong Tien: <span>320.000</span><sup>d</sup></p>
+                <p style="font-weight: bold;">Tong Tien: <strong>$ </strong><span>0</span></p>
             </div>
         </form>
 
