--- a/shop.html
+++ b/shop.html
@@ -666,6 +666,7 @@
     <!-- cart -->
     <section class="cart" style="margin-top: 70px;">
         <h2>Gio Hang</h2>
+        <hr>
         <form action="">
             <table>
                 <thead>
@@ -694,6 +695,7 @@
             <div class="price-total" style="text-align: right;">
                 <p style="font-weight: bold;">Tong Tien: <strong>$ </strong><span>0</span></p>
             </div>
+            <p id="thongbaothanhtoan" class="text-center"><a class="btn btn-success"> Check Out</a></p>
         </form>
 
     </section>
